Closed
Bug 205001
Opened 22 years ago
Closed 18 years ago
the print scale is ignored at using CSS absolute length unit
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla1.9alpha1
People
(Reporter: dmitry, Assigned: masayuki)
References
()
Details
(Keywords: testcase)
Attachments
(3 files)
732 bytes,
text/html
|
Details | |
6.72 KB,
patch
|
dbaron
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
456 bytes,
text/html
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030507
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4b) Gecko/20030507
Changing scale in preview dialog for this page does not change article body font
size, its stil oversized on A4 page, so prints are ripped.
Reproducible: Always
Steps to Reproduce:
1. Goto http://www.opennet.ru/base/net/bsd_pbr_route.txt.html
2. Open print preview
3. Change scale
Actual Results:
Only navigation link text ia changed. Article body have fixed size
Expected Results:
Scale whole page, like text zoom in browser window
Probably this happens on monospace font only
Reporter | ||
Comment 1•22 years ago
|
||
1.4rc2
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.4) Gecko/20030612
same bug
Reporter | ||
Comment 2•22 years ago
|
||
still exist
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.6) Gecko/20040113
Comment 3•21 years ago
|
||
Confirming the specified behavior with Mozilla/5.0 (Windows; U; Win98; en-US;
rv:1.8a4) Gecko/20040916. The culprit is merely specifying the font-size CSS
property of the text.
Comment 4•21 years ago
|
||
Just go to print preview and change the scale dramatically. Observe how normal
text is changed in size but text with font-size specified remains the same
size.
Assignee | ||
Comment 5•20 years ago
|
||
*** Bug 298142 has been marked as a duplicate of this bug. ***
*** Bug 264022 has been marked as a duplicate of this bug. ***
Comment 7•20 years ago
|
||
*** Bug 324704 has been marked as a duplicate of this bug. ***
*** Bug 325603 has been marked as a duplicate of this bug. ***
Reproducible with Firefox 1.5.0.1, SeaMonkey 1.5a/20060202 and even Mozilla 0.9.9. When I set Appearance > Fonts > Minimum font size: to 9 the fonts seem to grow a little at Scale: 200%, but they aren't doubled.
Assignee | ||
Comment 10•19 years ago
|
||
We should use current context scaling at resolving fixed length.
Assignee: printing → masayuki
Status: NEW → ASSIGNED
Attachment #210618 -
Flags: superreview?(roc)
Attachment #210618 -
Flags: review?(roc)
Assignee | ||
Updated•19 years ago
|
OS: Windows XP → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9alpha
Assignee | ||
Comment 11•19 years ago
|
||
I think that this box should be scaled by print scale. But we cannot scale the box by print scale. The patch fixes this issue too.
Assignee | ||
Updated•19 years ago
|
Summary: unable to change font size in print preview for article body → the print scale is ignored at using CSS absolute length unit
Assignee | ||
Updated•19 years ago
|
Component: Print Preview → Style System (CSS)
QA Contact: sujay → ian
Comment on attachment 210618 [details] [diff] [review]
Patch rv1.0
I think this is OK but I want dbaron to confirm. This is a pretty fundamental change.
Attachment #210618 -
Flags: superreview?(roc)
Attachment #210618 -
Flags: superreview+
Attachment #210618 -
Flags: review?(roc)
Attachment #210618 -
Flags: review?(dbaron)
Does this also fix bug 153080?
Comment on attachment 210618 [details] [diff] [review]
Patch rv1.0
Not that I understand our units system, but this fix (which does fix bug 153080) certainly seems sensible -- it matches the problem. r=dbaron
Attachment #210618 -
Flags: review?(dbaron) → review+
*** Bug 153080 has been marked as a duplicate of this bug. ***
Assignee | ||
Comment 17•19 years ago
|
||
checked-in to trunk.
I'll request approval 1.8 branch.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [pending to request approval 1.8 branch]
So this badly broke printing (but not print preview) of absolute length units in Windows and Cairo builds (but not builds using Postscript), since in those cases the canonical pixel scale starts of as non-1.
What we really need is for zoom to be implement some way other than fudging the canonical pixel scale so that we can separate the numbers. I think I suggested this in pretty early comments in bug 153080.
Stuart is backing this out now, I think.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 19•19 years ago
|
||
backed out
Comment 20•19 years ago
|
||
This might be worth working on if somebody is willing to patch this for the 1.8 branch, but the forward-looking solution is to use proper scaling; my patch in bug 177805 does that, but it's waiting on the cairo gfx work because I didn't push to get fixes for all the GFX backends. I'll write up an update in that bug shortly.
Assignee | ||
Updated•19 years ago
|
Status: REOPENED → NEW
Whiteboard: [pending to request approval 1.8 branch]
Comment 21•18 years ago
|
||
Fixed by the changes in bug 177805.
Status: NEW → RESOLVED
Closed: 19 years ago → 18 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•