Bug 205001 the print scale is ignored at using CSS absolute length unit r=dbaron, sr=roc