layout/style/nsCSSValue.cpp
@@ -41,6 +41,7 @@
 #include "imgIRequest.h"
 #include "nsIDocument.h"
 #include "nsContentUtils.h"
+#include "nsPresContext.h"
 
 // Paint forcing
 #include "prenv.h"
@@ -207,36 +208,39 @@ imgIRequest* nsCSSValue::GetImageValue() const
   return mValue.mImage->mRequest;
 }
 
-nscoord nsCSSValue::GetLengthTwips() const
+nscoord nsCSSValue::GetLengthTwips(nsPresContext* aPresContext) const
 {
   NS_ASSERTION(IsFixedLengthUnit(), "not a fixed length unit");
+  NS_ASSERTION(aPresContext, "aPresContext is null");
 
+  float scale =
+    aPresContext->ScaledPixelsToTwips() / aPresContext->PixelsToTwips();
   if (IsFixedLengthUnit()) {
     switch (mUnit) {
     case eCSSUnit_Inch:        
-      return NS_INCHES_TO_TWIPS(mValue.mFloat);
+      return NS_INCHES_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Foot:        
-      return NS_FEET_TO_TWIPS(mValue.mFloat);
+      return NS_FEET_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Mile:        
-      return NS_MILES_TO_TWIPS(mValue.mFloat);
+      return NS_MILES_TO_TWIPS(mValue.mFloat * scale);
 
     case eCSSUnit_Millimeter:
-      return NS_MILLIMETERS_TO_TWIPS(mValue.mFloat);
+      return NS_MILLIMETERS_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Centimeter:
-      return NS_CENTIMETERS_TO_TWIPS(mValue.mFloat);
+      return NS_CENTIMETERS_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Meter:
-      return NS_METERS_TO_TWIPS(mValue.mFloat);
+      return NS_METERS_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Kilometer:
-      return NS_KILOMETERS_TO_TWIPS(mValue.mFloat);
+      return NS_KILOMETERS_TO_TWIPS(mValue.mFloat * scale);
 
     case eCSSUnit_Point:
-      return NSFloatPointsToTwips(mValue.mFloat);
+      return NSFloatPointsToTwips(mValue.mFloat * scale);
     case eCSSUnit_Pica:
-      return NS_PICAS_TO_TWIPS(mValue.mFloat);
+      return NS_PICAS_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Didot:
-      return NS_DIDOTS_TO_TWIPS(mValue.mFloat);
+      return NS_DIDOTS_TO_TWIPS(mValue.mFloat * scale);
     case eCSSUnit_Cicero:
-      return NS_CICEROS_TO_TWIPS(mValue.mFloat);
+      return NS_CICEROS_TO_TWIPS(mValue.mFloat * scale);
     default:
       NS_ERROR("should never get here");
       break;
